config/instances/manuela-demo-argocd-aggregator/hub/manuela-demo-argocd-aggregator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-demo-argocd-aggregator
